@startuml

class Operation {
    DateTime StartTime
    DateTime EndTime
}
Operation *--> OperationType
Operation *--> "?" Error
Operation --> "?" Logfile

enum OperationType {
    MachineOperation
    SendPanelToNextStation
}

class Panel
Panel *--> "+" Board
Panel o--> "*" Operation

class Board
Board o--> "*" Defect

@enduml